# login-page

./: .coverage  .coveragerc  .djlintrc  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE.md  README.md  auth.py  coverage.json  database.py  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  seed_user.py  test_ui.duckdb.wal
.github/: copilot-instructions.md
.github/instructions/: frontend.instructions.md  python.instructions.md
.github/workflows/: ci-cd.yml  deploy.yml
data/: app.duckdb.wal
docs/: OXL_League_Manual.md  england_athletics_api.md  entries-and-results-plan.md  fonts.md  high-level-plan.md  standings-integration.md  website_ideas.md
migrations/: 0001_create_users.sql  0002_create_posts.sql  0003_create_seasons.sql  0004_create_fixtures.sql  0005_add_fixture_location_fields.sql  0006_create_fixture_images.sql  0007_create_races_and_results.sql  0008_create_static_pages.sql  0009_create_standings.sql  0010_add_standings_id_sequences.sql
scripts/: _apply_migrations.py  _migration_helpers.py  migrate_results.py  migrate_standings.py  seed_rules.py  validate-licenses.py
src/cli/: seed_fixture.py  seed_results.py  seed_rules.py  seed_season.py  seed_user.py
src/website/: __init__.py  auth.py  database.py  export.py  helpers.py  identity.py  main.py  models.py  repository.py  seed_fixture.py  seed_results.py  seed_season.py  seed_user.py  standings.py
static/: fixture-images.js  fixture-map.js  post-editor.js  results-filter.js  rules-editor.js  style.css  timetable-editor.js
templates/: _fixture_detail.html  _fixture_form.html  _fixture_images.html  _fixtures_season_panel.html  _pagination.html  _results_fixture_panel.html  _results_race_panel.html  _results_race_table.html  _season_form.html  _standings_category_panel.html  _standings_table.html  account.html  administration.html  base.html  documentation.html  entries.html  events.html  fixtures.html  history.html  index.html  login.html  news.html  post_detail.html  post_form.html  privacy.html  results.html  rules_and_constitution.html  rules_and_constitution_form.html  standings.html
tests/: conftest.py  test_auth.py  test_database.py  test_main.py  test_models.py
tests/ui/: conftest.py  (+5 more)
(+25 files in other folders)
