[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "website"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy",
    "bcrypt",
    "itsdangerous",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24",
]

dev = [
    "pre-commit",
    "ruff",
    "ty",
    "pip-audit>=2.6",
    "pip-licenses>=4.3",
    "bandit>=1.7",
]

ci = [
    "semgrep",
]
