[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "website"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "bcrypt",
    "itsdangerous",
    "duckdb>=1.5.1",
    "nh3>=0.3.4",
    "slowapi>=0.1.9",
    "fastapi-permissions>=0.2.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24",
    "playwright>=1.58.0",
    "pytest-playwright>=0.4.0",
]

dev = [
    "pre-commit",
    "ruff",
    "ty",
    "pip-audit>=2.6",
    "pip-licenses>=4.3",
    "bandit>=1.7",
    "djlint>=1.36.4",
]

ci = [
    "semgrep",
]
